add readme and build script